<resources>
    <string name="app_name">LegoTest</string>
    <string name="text">Text</string>
    <string name="JoyBackDescr">analogimage</string>
    <string name="title_activity_popwindows" translatable="false">popwindows</string>
    <string name="bloatstring" translatable="false">answeransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweransweranswer</string>
    <string name="placeHolderQuestion" translatable="false">Question X</string>
    <string name="placeHolderProblem" translatable="false">Problem X</string>
    <string name="closeDescription">Close</string>

    <!--image descriptions-->
    <string name="logo_description">Logo of LegoStoneEng</string>
    <string name="smiley_face">Smiley face</string>

    <!--generic strings-->

    <!--AutomaticDriveActivity-->
    <string name="not_pressed">Not pressed</string>
    <string name="pressed">Pressed</string>
    <string name="distance_value">Distance value</string>
    <string name="advanced_actions_title">Advanced Actions</string>
    <string name="avoid_obstacles">Avoid Obstacles</string>
    <string name="calculate_distance">Calculate distance</string>
    <string name="voice_command">Voice Command</string>
    <string name="result">Result:</string>
    <string name="stop" translatable="false">STOP</string>

        <!--VoiceCommands-->
        <string name="go_lowercase">go</string>
            <string name="forward_lowercase">forward</string>
                <string name="going_forward">i\'m going forward</string>
            <string name="backwards_lowercase">backwards</string>
                <string name="going_backwards">i\'m going backwards</string>
        <string name="turn_lowercase">turn</string>
            <string name="left_lowercase">left</string>
                <string name="turning_left">i\'m turning left</string>
            <string name="right_lowercase">right</string>
                <string name="turning_right">i\'m turning right</string>
        <string name="do_lowercase">do</string>
            <string name="three_sixty">three hundred sixty</string>
                <string name="im_crazy">i\'m crazy</string>
        <string name="stop_lowercase">stop</string>

    <!--BtPairedActivity-->
    <string name="select_a_bluetooth_device">Select a Bluetooth device</string>
    <string name="bluetooth_off_or_no_paired_device">Bluetooth off or no Paired device</string>

    <!--MainActivity-->
    <string name="disconnected" translatable="false">Disconnected</string>
    <string name="connect" translatable="false">Connect</string>
    <string name="disconnect" translatable="false">Disconnect</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="automatic_section" translatable="false">Automatic Section</string>
    <string name="test_sections" translatable="false">Test Sections</string>
    <string name="help_section" translatable="false">Help Section</string>
    <string name="settings_section" translatable="false">Settings Section</string>

    <!--HelpActivity-->
    <string name="help_title">HELP</string>
    <string name="credits">CREDITS</string>
    <string name="contacts">CONTACTS</string>
    <string name="manual">MANUAL</string>
    <string name="faqs" translatable="false">FAQs</string>

    <!--FAQsActivity-->
    <string name="faqs_title" translatable="false">FAQs</string>
    <string name="buttonfaq_placeholder" translatable="false">buttonFAQ</string>
    
        <!--FAQs-->
            <string name="question1">How do I connect to my LegoEv3?</string>
            <string name="question2">How do I control my LegoEv3?</string>
            <string name="question3">Does it support IOS?</string>
            <string name="question4">Can I configure the LegoEV3\'s ports?</string>
        <!--answers-->
            <string name="answer1">To connect to LegoEv3 you need to click on connect in the home view.</string>
            <string name="answer2">To control the LegoEv3 you have to go to the home and select Test, otherwise if you plan to perform functions, you have to go to Advanced Actions.</string>
            <string name="answer3">No, compatibility with the IOS system is not available at the moment.</string>
            <string name="answer4">Yes, by default we have inserted a configuration to control the LegoEV3, but at will they can be replaced with your own configurations.</string>
    
    <!--ManualActivity-->
    <string name="manual_title">MANUAL</string>
    <string name="buttonmanual_placeholder" translatable="false">buttonManual</string>
    
        <!--problems-->
            <string name="manual_test" translatable="false">TEST</string>
            <string name="manual_advanced_actions" translatable="false">ADVANCED ACTIONS</string>
            <string name="manual_settings" translatable="false">SETTINGS</string>
            <string name="manual_help" translatable="false">HELP</string>
    
        <!--solutions-->
            <string name="solution1">In this section you can test the various sensor, to check if your LegoEV3 works correctly without any problems</string>
            <string name="solution2">In this section you can activate the various functions that the LegoEV3 can do</string>
            <string name="solution3">In this section you can set the port to the sensor you are using so that it will work correctly. The motors can be configured from Port A to D, and the sensors from Port 1 to 4. You can also check the Bluetooth connection and review the app</string>
            <string name="solution4">In this section you can find help with the Faqs to common question you may have and our contacts and who developed this :) </string>

    <!--ManualDriveActivity-->
    <string name="number_rotations">Number Rotation</string>
    <string name="go_up">go up</string>
    <string name="go_left">go left</string>
    <string name="go_right">go right</string>
    <string name="go_down">go down</string>
    <string name="up_text">UP</string>
    <string name="down_text">DOWN</string>
    <string name="gyro_placeholder">gyro value</string>
    <string name="sensorup">sensorup</string>
    <string name="sensordown">sensordown</string>

    <!--SettingsActivity-->
    <string name="bluetooth_enabled">Bluetooth enabled</string>
    <string name="bluetooth_disabled">Bluetooth disabled</string>
    <string name="enabling_bluetooth">enabling Bluetooth</string>
    <string name="disabling_bluetooth">disabling Bluetooth</string>
    <string name="bluetooth_not_present">Bluetooth is not present</string>
    <string name="settings_title">SETTINGS</string>
    <string name="set_ports">Set Ports</string>
    <string name="review_app">Review App</string>
    <string name="bluetooth_connection">Bluetooth Connection</string>

    <!--TestMotorsActivity-->
    <string name="test_motors_tilte">Test Motors</string>
    <string name="go_test_sensors">Test Sensors</string>
    <string name="go_test_motors">Test Motors</string>
    <string name="up">up</string>
    <string name="down">down</string>

    <!--TestSensorsActivity-->
    <string name="test_sensors_title">Test Sensors</string>
    <string name="touch_sensor">Touch Sensor</string>
    <string name="released">released</string>
    <string name="light_sensor">Light Sensor</string>
    <string name="novalue">noValue</string>

    <!--contactsPopup-->
    <string name="email_legostoneng_gmail_com" translatable="false">Email: legoStonEng@gmail.com</string>
    <string name="phone_39_xxxxxxxxx">Phone: +39 XXXXXXXXX</string>
    <string name="address_viale_legomaniaci_42">Address: Viale LegoManiaci 42</string>
    <string name="website_optimusprime_altervista_it">Website: optimusprime.altervista.it</string>

    <!--creditsPopup-->
    <string name="developers">Developers</string>
    <string name="marco_barna" translatable="false">Marco Barnà</string>
    <string name="pasquale_soldano" translatable="false">Pasquale Soldano</string>
    <string name="riccardo_dentico" translatable="false">Riccardo Dentico</string>
    <string name="alvise_battistich" translatable="false">Alvise Battistich</string>

    <!--setPortsPopup-->
    <string name="motor1">Motor1</string>
    <string name="motor2">Motor2</string>
    <string name="motor3">Motor3</string>
    <string name="color_sensor">Color Sensor</string>
    <string name="gyro_sensor">Gyro Sensor</string>
    <string name="proximity_sensor">Proximity Sensor</string>

    <!--selectLanguage-->
    <string name="select_language">Select Language</string>
    <string name="italiano" translatable="false">ITALIANO</string>
    <string name="english" translatable="false">ENGLISH</string>
    <string name="language_set">Language Set</string>

</resources>
