<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center">
    
    <ImageView
        android:id="@+id/closePopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:elevation="5dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/closeDescription" />

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/colorWhite"
        android:padding="15sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titlePopup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="20sp"
                android:text="@string/developers"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="1dp"
                android:src="@drawable/ic_insert_emoticon_black_24dp"
                android:contentDescription="@string/smiley_face" />

            <TextView
                android:id="@+id/marco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="20sp"
                android:text="@string/marco_barna"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/pasquale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="20sp"
                android:text="@string/pasquale_soldano"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/riccardo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="20sp"
                android:text="@string/riccardo_dentico"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/alvise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="20sp"
                android:text="@string/alvise_battistich"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>