<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/closePopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:elevation="5dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/closeDescription" />

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/colorWhite"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titlePopup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="20sp"
                android:text="@string/contacts"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="20sp"
                android:text="@string/email_legostoneng_gmail_com"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="20sp"
                android:text="@string/phone_39_xxxxxxxxx"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="20sp"
                android:text="@string/address_viale_legomaniaci_42"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="20sp"
                android:text="@string/website_optimusprime_altervista_it"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>