<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center">
    
    <ImageView
        android:id="@+id/closePopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:elevation="5dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/closeDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/colorWhite"
            android:layout_marginBottom="20sp">

                <TextView
                    android:id="@+id/FAQquestionPopup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:text="@string/placeHolderQuestion"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/colorWhite">

            <TextView
                android:id="@+id/FAQanswerPopup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:text="@string/bloatstring"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>